--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root"></div>
   </body>
 </html>
